--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,40 @@
-.App {
-  text-align: center;
+/* body{
+
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.container{
+  display: grid;
+  grid-template-columns: 30% auto;
+  grid-template-rows: auto auto 80px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+header{
+  display: flex;
+  grid-column-end: 2;
+  width: 100%;
+
 }
 
-.App-title {
-  font-size: 1.5em;
+.login-buttons{
+  align-self: flex-end;
 }
 
-.App-intro {
-  font-size: large;
+button{
+  color: darkgray;
+  border-radius: 40px;
+  background-color: aqua;
+  border: none;
+  padding: 0 2em;
+  margin: 1em;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.roomlist{
+  grid-column-start: 1;
+  background-color: blueviolet;
 }
+
+.messagelist{
+  display: flex;
+
+} */
