--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* body{
+body{
 
 
 }
@@ -6,12 +6,15 @@
 .container{
   display: grid;
   grid-template-columns: 30% auto;
-  grid-template-rows: auto auto 80px;
+  grid-template-rows: auto 1fr;
+  height: 100vh;
 }
 
 header{
   display: flex;
-  grid-column-end: 2;
+  justify-content: space-between;
+  grid-column-start: 1;
+  grid-column-end: span 2;
   width: 100%;
 
 }
@@ -36,5 +39,30 @@ button{
 
 .messagelist{
   display: flex;
+  overflow: auto;
 
-} */
+
+}
+
+form{
+  display: flex;
+  
+}
+.messageForm{
+  align-self: flex-end;
+  width: 100%;
+  position: absolute;
+}
+
+.inputField{
+ 
+
+}
+
+.submit-btn{
+
+}
+
+ul{
+  list-style: none;
+}
